# cookiecutter-python-aiogram-bot

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .env  .env.example  .gitignore  LICENSE  Makefile  Pipfile  bot.py  pyproject.toml
{{cookiecutter.project_slug}}/config_data/: config.py
{{cookiecutter.project_slug}}/handlers/: user_handlers.py
{{cookiecutter.project_slug}}/tests/: tests.py
{{cookiecutter.repo_name}}/: .env.example  .gitignore  bot.py  pyproject.toml  requirements.txt
{{cookiecutter.repo_name}}/config_data/: config.py
{{cookiecutter.repo_name}}/lexicon/: lexicon_en.py
