[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = "{{cookiecutter.author}}"
readme = "README.md"
packages = [{include = "rps_game"}]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^22.12.0"
aiogram = "^2.24"
environs = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
