[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.author}}"]
readme = "README.md"
packages = [{include = "{{cookiecutter"}]


[tool.poetry.dependencies]
python = "^3.11"
aiogram = "2.23.1"
aiohttp = "3.8.3"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "22.2.0"
Babel = "2.9.1"
certifi = "2022.12.7"
charset-normalizer = "2.1.1"
environs = "9.5.0"
frozenlist = "1.3.3"
idna = "3.4"
magic-filter = "1.0.9"
marshmallow = "3.19.0"
multidict = "6.0.4"
packaging = "22.0"
python-dotenv = "0.21.0"
pytz = "2022.7"
yarl = "1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"